[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/textures/circle.png" type="Texture" id=1]
[ext_resource path="res://scripts/ui/mission_point.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 16.0

[node name="MissionPoint" type="Area2D"]
script = ExtResource( 2 )
mission_id = "level_id"

[node name="Sprite" type="Sprite" parent="."]
self_modulate = Color( 1, 1, 1, 0.5 )
scale = Vector2( 0.0625, 0.0625 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
